clusters/core-ci/apps/qci-pull-through-cache/qci-pull-through-cache-us-east-1.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qci-pull-through-cache-us-east-1
spec:
  to:
    kind: Service
    name: qci-pull-through-cache-us-east-1
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: v1
kind: Service
metadata:
  name: qci-pull-through-cache-us-east-1
spec:
  selector:
    app: qci-pull-through-cache-us-east-1
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qci-pull-through-cache-us-east-1
  labels:
    app: qci-pull-through-cache-us-east-1
spec:
  selector:
    matchLabels:
      app: qci-pull-through-cache-us-east-1
  template:
    metadata:
      labels:
        app: qci-pull-through-cache-us-east-1
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/qci-cache-worker"
        operator: "Equal"
        value: "qci-cache-worker"
        effect: "NoSchedule"
      nodeSelector:
        cache-workload: qci-cache
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: qci-pull-through-cache-us-east-1
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: qci-cache
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_docker-registry_tp-2.8.1
        command:
        - /tp-entrypoint.sh
        ports:
          - name: http
            containerPort: 5000
        volumeMounts:
        - mountPath: /etc/quay-io-pull-credentials
          name: quay-io-pull-credentials
        - mountPath: /etc/docker-registry
          name: config
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
      - name: config
        configMap:
          name: qci-pull-through-cache-us-east-1
      - name: quay-io-pull-credentials
        secret:
          secretName: quay-io-pull-credentials
